--- a/src/pages/ProductBoones/ProductBoones.css
+++ b/src/pages/ProductBoones/ProductBoones.css
@@ -1,6 +1,6 @@
 .boones-container {
 
-    margin-top: 150px;
+    margin-top: 100px;
     width: 100%;
     height: 100%;
     display: grid;
@@ -18,8 +18,8 @@
     position: relative;
     left: 191px;
     grid-area: photo1;
-    width: 407px;
-    height: 289px;
+    width: 347px;
+    height: 229px;
     background-image: url('../../assets/images/fotografia/producto/bones.png');
     background-size: cover;
 }
@@ -29,9 +29,11 @@
 }
 
 .photo2-boones {
+    position: relative;
     grid-area: photo2;
-    width: 803px;
-    height: 551px;
+    width: 533px;
+    height: 281px;
+    left: 100px;
     background-image: url('../../assets/images/fotografia/producto/bones\ mockups.png');
     background-size: cover;
     border-radius: 72px;
